# alarmnew

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: get_chat_ids.py  telethon_login.py
src/aialarm/: __init__.py  api.py  cli.py  config.py  logging.py  reporting.py
src/aialarm/collectors/: __init__.py  base.py  dedup.py  images.py  rss.py  scraper.py  store.py  telegram_source.py  tg_web.py
src/aialarm/db/: __init__.py  models.py  session.py
src/aialarm/filtering/: __init__.py  llm_classifier.py  pipeline.py  prefilter.py  rules.py
src/aialarm/llm/: __init__.py  client.py  embeddings.py
src/aialarm/moderation/: __init__.py  bot.py  max_bot.py  max_client.py  notify.py  service.py
src/aialarm/pipeline/: __init__.py  runner.py  scheduler.py
src/aialarm/publishers/: __init__.py  base.py  footer.py  max.py  service.py  telegram.py
src/aialarm/rewrite/: __init__.py  rewriter.py
tests/: test_offline.py
