[project]
name = "aialarm"
version = "0.1.0"
description = "Автопостинг региональных новостей в Telegram и MAX: сбор → фильтрация → рерайт → модерация → публикация"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "openai>=1.40",
    "aiogram>=3.7",
    "telethon>=1.36",
    "APScheduler>=3.10",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Качественные многоязычные эмбеддинги для дедупа/префильтра (прод).
# Без этого пакета используется встроенный char-ngram TF-IDF fallback.
embeddings = ["sentence-transformers>=3.0"]
# Продовый профиль: очередь задач и Postgres.
prod = ["celery[redis]>=5.4", "psycopg[binary]>=3.1", "pgvector>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aialarm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
